--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "sign in app for mama kin open mic",
   "main": "script.js",
   "scripts": {
+    "start": "node index.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
